Scheduler for Heroku sleep issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,9 @@ entitymanager.packagesToScan: org.demo.entity
 
 #logging-level
 logging.level.org.springframework.web=DEBUG
+
+#health-url for heroku keep alive
+health.url=https://authenticator-service.herokuapp.com/health
+
+#Active profile for dev !important do not check in
+spring.profiles.active=prod
