Changing the log level and increasing the schedule time.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ hibernate.config.hbm2ddl: create
 entitymanager.packagesToScan: org.demo.entity
 
 #logging-level
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
 
 #health-url for heroku keep alive
 health.url=https://authenticator-service.herokuapp.com/health
